# docflower

./: .gitignore  .gitmessage  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  Makefile  README.md  package.json  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  release.yml  semantic-pr.yml
docs/: about.md  help.md
scripts/: update_version.py
src/docflow/application/: dto.py  version_labels.py
src/docflow/application/interactors/: __init__.py
src/docflow/application/interactors/commands/: create_branch.py  create_version.py  delete_document.py  (+5 more)
src/docflow/application/interfaces/: __init__.py  file_storage.py
src/docflow/domain/entities/: __init__.py  audit.py  branch.py  document.py  document_file.py  tag.py  version.py
src/docflow/domain/exceptions/: __init__.py  errors.py
src/docflow/infrastructure/db/: connection.py  schema.py
src/docflow/infrastructure/repositories/: audit_repo.py  document_repo.py  file_repo.py  tag_repo.py  version_repo.py
src/docflow/infrastructure/storage/: file_storage.py
src/docflow/main/: __init__.py  app.py  config.py  container.py  seed.py
src/docflow/presentation/dialogs/: __init__.py  add_document_dialog.py  confirm_delete_dialog.py  create_tag_dialog.py  edit_metadata_dialog.py  help_dialog.py  new_version_dialog.py  tag_manager_dialog.py  tag_picker_dialog.py
src/docflow/presentation/styles/: theme.py
src/docflow/presentation/widgets/: audit_page.py  doc_card_page.py  doc_list_page.py  sidebar.py  tag_chip.py  version_tree_page.py
src/docflow/presentation/windows/: main_window.py
(+11 files in other folders)
